[package]
description = "Parser/encoder for ASN.1 BER/DER data"
license = "MIT/Apache-2.0"
keywords = ["BER","DER","ASN1","parser","nom"]
homepage = "https://github.com/rusticata/der-parser"
repository = "https://github.com/rusticata/der-parser.git"
name = "asn1-rs"
version = "0.2.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2018"

include = [
  "LICENSE-*",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "src/*.rs",
  "src/asn1_types/*.rs",
  "src/asn1_types/real/*.rs",
  "src/asn1_types/sequence/*.rs",
  "src/asn1_types/set/*.rs",
  "src/asn1_types/strings/*.rs",
  "src/asn1_types/tagged/*.rs",
  "src/ber/*.rs",
  "tests/*.rs",
]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
bigint = ["num-bigint"]
bits = ["bitvec"]
datetime = ["chrono"]
serialize = ["cookie-factory"]
std = []

[dependencies]
asn1-rs-macro-oid = { version="0.1", path="./macro-oid" }
bitvec = { version="0.22", optional=true }
chrono = { version="0.4.19", optional=true }
cookie-factory = { version="0.3.0", optional=true }
derive-asn1-rs = { version="0.1", path="./derive-asn1-rs" }
displaydoc = "0.2.2"
nom = { version="7.0", default_features=false, features=["std"] }
num-bigint = { version = "0.4", optional = true }
num-traits = "0.2.14"
rusticata-macros = "4.0"
thiserror = "1.0.25"

[dev-dependencies]
colored = "2.0"
hex-literal = "0.3.1"
oid-registry = { version="0.2.0", features=["crypto","x509"] }
pem = "1.0.1"
