[package]
description = "Parser/encoder for ASN.1 BER/DER data"
license = "MIT OR Apache-2.0"
keywords = ["BER","DER","ASN1","parser","nom"]
homepage = "https://github.com/rusticata/asn1-rs"
repository = "https://github.com/rusticata/asn1-rs.git"
name = "asn1-rs"
version = "0.8.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parser-implementations"]
readme = "README.md"
edition = "2018"
rust-version = "1.65"

include = [
  "CHANGELOG.md",
  "CONTRIBUTING.md",
  "LICENSE-*",
  "README.md",
  ".gitignore",
  "Cargo.toml",
  "doc/*.md",
  "examples/*.rs",
  "src/*.rs",
  "src/asn1_types/*.rs",
  "src/asn1_types/real/*.rs",
  "src/asn1_types/sequence/*.rs",
  "src/asn1_types/set/*.rs",
  "src/asn1_types/strings/*.rs",
  "src/asn1_types/tagged/*.rs",
  "src/ber/*.rs",
  "src/doc/*.rs",
  "src/to_ber/*.rs",
  "tests/*.rs",
]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
bigint = ["num-bigint"]
datetime = ["deranged", "time"]
debug = ["std", "log"]
serialize = ["cookie-factory"]
std = []
trace = ["debug"]

[dependencies]
asn1-rs-derive = { version="0.6", path="./derive" }
asn1-rs-impl = { version="0.2", path="./impl" }
bitvec = { version="1.0" }
cookie-factory = { version="0.3.0", optional=true }
# Note: pin version of deranged to 0.4.0 to work around build failure
# See https://github.com/jhpratt/deranged/issues/21
deranged = { version = "=0.4.0", optional = true }
displaydoc = "0.2.2"
log = { version = "0.4", default-features = false, optional = true }
nom = { version="8.0", default-features=false, features=["std"] }
num-bigint = { version = "0.4", optional = true }
num-traits = "0.2.14"
rusticata-macros = "5.0"
thiserror = "2.0.0"
time = { version="0.3", features=["macros", "parsing", "formatting"], optional=true }

[dev-dependencies]
colored = "3.0"
env_logger = { version = "0.11", default-features = false, features = ["auto-color"] }
hex-literal = "0.4"
pem = "3.0"
trybuild = "1.0"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "nom",
    "nom::*",
    "asn1_rs_derive",
    "asn1_rs_derive::*",
    "bitvec",
    "bitvec::order::Msb0",
    "bitvec::slice::BitSlice"
]

