[package]
name = "asn1-rs-derive"
version = "0.4.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
description = "Derive macros for the `asn1-rs` crate"
license = "MIT/Apache-2.0"
homepage = "https://github.com/rusticata/asn1-rs"
repository = "https://github.com/rusticata/asn1-rs.git"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version="1.0", features = ["full"] }
synstructure = "0.12"
